<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="24dp">


        <TextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/dialog_add_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_info"
            android:paddingTop="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dialog_add_editName"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_name"
            android:paddingTop="8dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edit_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dialog_add_editDescription"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_msg"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edit_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dialog_add_editUrl"
                android:inputType="textUri" />

        </android.support.design.widget.TextInputLayout>




            <Switch
                android:id="@+id/switchFree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_url"
                android:paddingLeft="4dp"
                android:paddingBottom="32dp"
                android:text="@string/dialog_add_editIsFree"
                android:textSize="16sp"/>



        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/switchFree"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_add_buttonCancel" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/dialog_add_buttonAdd"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </RelativeLayout>

</ScrollView>